# sqleibniz

./: Cargo.toml  Makefile  README.md  leibniz.lua  leibniz.toml
.github/workflows/: rust.yml
example/: sqleibniz.sql  stmt.sql
src/: error.rs  lev.rs  main.rs  rules.rs  types.rs
src/highlight/: builder.rs  mod.rs
src/lexer/: mod.rs  tests.rs
src/lsp/: error.rs  mod.rs  neovim.lua
src/lsp/handlers/: diagnostic.rs  hover.rs  mod.rs
src/parser/: mod.rs  nodes.rs  tests.rs  tracer.rs
src/types/: config.rs  ctx.rs  keyword.rs  mod.rs  rules.rs  storage.rs
tests/: blob.sql  comment.sql  invalid.sql  literal.sql  number.sql  select.sql  sqleibniz.sql  stmt.sql  string.sql
