[package]
name = "sqleibniz"
version = "0.1.0"
edition = "2021"

[features]
trace_parser = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
